src/objects/SurveyQuestionResponse__c.object
<CustomObject>
    <description>Survey Force object</description>
<!--    <fields>-->
<!--        <fullName>Question_Type__c</fullName>-->
<!--        <description>Show the question type at a glance</description>-->
<!--        <externalId>false</externalId>-->
<!--        <formula>TEXT(Survey_Question__r.Type__c)</formula>-->
<!--        <label>Question Type</label>-->
<!--        <required>false</required>-->
<!--        <trackTrending>false</trackTrending>-->
<!--        <type>Text</type>-->
<!--        <unique>false</unique>-->
<!--    </fields>-->
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SurveyTaker__c</fullName>
        <label>Survey Taker</label>
        <referenceTo>SurveyTaker__c</referenceTo>
        <relationshipLabel>Survey Question Responses</relationshipLabel>
        <relationshipName>Survey_Question_Answers</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Survey_Question__c</fullName>
        <label>Survey Question</label>
        <referenceTo>Survey_Question__c</referenceTo>
        <relationshipName>Survey_Question_Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <description>Show Survey Name on question response</description>
        <formula>Survey_Question__r.Survey__r.Name</formula>
        <label>Survey</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Time_Question_was_Responded_to__c</fullName>
        <defaultValue>1</defaultValue>
        <label># of Time Question was Responded to</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Survey Question Response</label>
    <nameField>
        <displayFormat>Response-{0000000}</displayFormat>
        <label>Response ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Question Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>